IngressNginx/page404.yaml
apiVersion: v1
kind: Pod
metadata:
  name: default-backend
  namespace: ingress-nginx
spec:
  containers:
    - name: default-backend
      image: 192.168.2.19:5000/defaultbackend:1.5
      ports:
        - containerPort: 80
