IngressNginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: register.cnss.cg
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-register
            port:
              number: 8761
  - host: gateway.cnss.cg
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: service-gateway
            port:
              number: 8888
  - host: admin.cnss.cg
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: service-admin
            port:
              number: 1994
  - host: paramglobal.cnss.cg
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: parametrageglobal
            port:
              number: 1995
  - host: frontadmin.cnss.cg
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: service-admin-front
            port:
              number: 80
